# Alpha_Vantage_API_Project

./: API_Data_Retrieve.py  LICENSE  README.md  main.py
Alpha_Vantage_pkg/: README.md  pyproject.toml  setup.cfg
Alpha_Vantage_pkg/src/Alpha_Vantage_API/: API_Data_Retrieve.py
Alpha_Vantage_pkg/src/Alpha_Vantage_API_Data/: API_Data_Retrieves.py
Alpha_Vantage_pkg/src/Alpha_Vantage_API_Data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Documentation/: Documentation.md  中文文档.md
