[metadata]
name = Alpha_Vantage_API_Data
version = 1.0.2
author = Jeff Duan 
description = This is an Aplha_Vantage_API data retrieving package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codemakerss/Alpha_Vantage_API_Project
project_urls =
    Bug Tracker = https://github.com/codemakerss/Alpha_Vantage_API_Project/issues
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: MacOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
